--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1453,20 +1453,19 @@ section {
   color: #fff;
 }
 
-.contact .php-email-form {
+.formsol {
   width: 100%;
   border-top: 3px solid #47b2e4;
   border-bottom: 3px solid #47b2e4;
   padding: 30px;
-  background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
 }
 
-.contact .php-email-form .form-group {
+.contact .formsol .form-group {
   padding-bottom: 8px;
 }
 
-.contact .php-email-form .validate {
+.contact .formsol .validate {
   display: none;
   color: red;
   margin: 0 0 15px 0;
