--- a/form.css
+++ b/form.css
@@ -23,4 +23,28 @@
     background: #209dd8;
   }
 
-  
+.rez{
+  transform: translate(100px,0px);
+  padding: 0 20px;
+  background: #47b2e4;
+    color: #fff;
+    border-radius: 50px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    border: 0px;
+    font-size: 16px;
+    padding: 0px 20px;
+}
+
+
+
+@media (max-width: 420px) {
+  .rez {
+    transform: translate(0px,45px);
+    max-width: 100%;
+    width: 110px;
+  }
+}
